--- a/src/styles/objects/tooltips.less
+++ b/src/styles/objects/tooltips.less
@@ -4,8 +4,8 @@
 .tooltips(@boolean) when (@boolean = true) {
 
     // Usage
-    // <element data-tooltip="..." data-placement="top" />
-    // Make tooltip multi-line with data-tooltip-multiline
+    // <element class="tooltip tooltip--*" aria-label="..."/>
+    // Make tooltip multi-line with class "tooltip--multiline"
 
     // Variables
     @tooltip-position: (@tooltip-offset + 2 + @tooltip-arrow-size);
@@ -19,7 +19,7 @@
     // The 'after' pseudo elements is generated only if arrow
     // size is larger than 0.
 
-    [data-tooltip] {
+    .tooltip {
         position: relative;
         &:after,
         &:before {
@@ -49,7 +49,7 @@
             border-radius: @tooltip-border-radius;
             box-shadow: @tooltip-box-shadow;
             color: @tooltip-color;
-            content: attr(data-tooltip);
+            content: attr(aria-label);
             font-size: @tooltip-font-size;
             line-height: @tooltip-font-size;
             letter-spacing: @tooltip-letter-spacing;
@@ -71,114 +71,115 @@
                 visibility: visible;
             }
         }
-        &:hover:before,
-        &:hover:after {
-            // Transition-delay will apply as soon as element is hovered.
+    }
 
+    // Tooltip variations
+
+    // Top & bottom tooltips
+
+    .tooltip--top {
+        &:before,
+        &:after {
+            bottom: 100%;
         }
-
-        // Tooltip top & bottom
-        &[data-placement="top"],
-        &[data-placement="bottom"] {
+        &:after when (@tooltip-arrow-size >= 1) {
+            border-top-color: @tooltip-background;
+            margin-bottom: -(@tooltip-arrow-size * 2);
+        }
+        &:hover,
+        &:focus {
             &:after,
             &:before {
-                left: 50%;
-                transform: translate(-50%, 0);
+            transform: translate(-50%, -@tooltip-position);
             }
         }
+    }
 
-        &[data-placement="top"] {
-            &:before,
-            &:after {
-                bottom: 100%;
-            }
-            &:after when (@tooltip-arrow-size >= 1) {
-                border-top-color: @tooltip-background;
-                margin-bottom: -(@tooltip-arrow-size * 2);
-            }
-            &:hover,
-            &:focus {
-                &:after,
-                &:before {
-                transform: translate(-50%, -@tooltip-position);
-                }
-            }
+    .tooltip--bottom {
+        &:before,
+        &:after {
+            top: 100%;
         }
-        &[data-placement="bottom"] {
-            &:before,
-            &:after {
-                top: 100%;
-            }
-            &:after when (@tooltip-arrow-size >= 1) {
-                border-bottom-color: @tooltip-background;
-                margin-top: -(@tooltip-arrow-size * 2);
-            }
-            &:hover,
-            &:focus {
-                &:after,
-                &:before {
-                    transform: translate(-50%, @tooltip-position);
-                }
-            }
+        &:after when (@tooltip-arrow-size >= 1) {
+            border-bottom-color: @tooltip-background;
+            margin-top: -(@tooltip-arrow-size * 2);
         }
-
-        // Tooltip left & right
-        &[data-placement="left"],
-        &[data-placement="right"] {
+        &:hover,
+        &:focus {
             &:after,
             &:before {
-                top: 50%;
-                transform: translate(0, -50%);
+                transform: translate(-50%, @tooltip-position);
             }
         }
+    }
 
-        &[data-placement="left"] {
-            &:before,
-            &:after {
-                right: 100%;
-            }
-            &:after when (@tooltip-arrow-size >= 1) {
-                border-left-color: @tooltip-background;
-                margin-right: -(@tooltip-arrow-size * 2);
-            }
-            &:hover,
-            &:focus {
-                &:after,
-                &:before {
-                transform: translate(-@tooltip-position, -50%);
-                }
-            }
+    .tooltip--top,
+    .tooltip--bottom {
+        &:after,
+        &:before {
+            left: 50%;
+            transform: translate(-50%, 0);
         }
+    }
 
-        &[data-placement="right"] {
-            &:before,
-            &:after {
-                left: 100%;
-            }
-            &:after when (@tooltip-arrow-size >= 1) {
-                border-right-color: @tooltip-background;
-                margin-left: -(@tooltip-arrow-size * 2);
-            }
-            &:hover,
-            &:focus {
-                &:after,
-                &:before {
-                transform: translate(@tooltip-position, -50%);
-                }
-            }
+    // Left & right tooltips
+
+    .tooltip--left {
+        &:before,
+        &:after {
+            right: 100%;
         }
-
-
-        &[data-tooltip-multiline] {
+        &:after when (@tooltip-arrow-size >= 1) {
+            border-left-color: @tooltip-background;
+            margin-right: -(@tooltip-arrow-size * 2);
+        }
+        &:hover,
+        &:focus {
+            &:after,
             &:before {
-                white-space: pre-line;
-                line-height: @line-height-ratio;
-                width: max-content;
-                max-width: @tooltip-multiline-width;
-                @media @ie9-10 {
-                    // Fixed width for IE9 and IE10
-                    width: @tooltip-multiline-width;
-                }
+            transform: translate(-@tooltip-position, -50%);
+            }
+        }
+    }
+
+    .tooltip--right {
+        &:before,
+        &:after {
+            left: 100%;
+        }
+        &:after when (@tooltip-arrow-size >= 1) {
+            border-right-color: @tooltip-background;
+            margin-left: -(@tooltip-arrow-size * 2);
+        }
+        &:hover,
+        &:focus {
+            &:after,
+            &:before {
+            transform: translate(@tooltip-position, -50%);
+            }
+        }
+    }
+
+    .tooltip--left,
+    .tooltip--right {
+        &:after,
+        &:before {
+            top: 50%;
+            transform: translate(0, -50%);
+        }
+    }
+
+    // Multiline tooltip
+
+    .tooltip--multiline {
+        &:before {
+            white-space: pre-line;
+            line-height: @line-height-ratio;
+            width: max-content;
+            max-width: @tooltip-multiline-width;
+            @media @ie9-10 {
+                // Fixed width for IE9 and IE10
+                width: @tooltip-multiline-width;
             }
         }
     }
