fix typos in styleguide

--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -261,7 +261,7 @@
 // TOOLTIPS
 // -------------------------------------------------------
 @tooltip-background:            @grey-800;
-@tooltip-color:                 @grey-100;
+@tooltip-color:                 @grey-50;
 @tooltip-border-radius:         @border-radius-default;
 @tooltip-vertical-padding:      @spacing-half;
 @tooltip-horizontal-padding:    @spacing-half;
@@ -272,6 +272,7 @@
 @tooltip-anim-delay:            100ms;
 @tooltip-font-size:             11px;
 @tooltip-font-weight:           400;
+@tooltip-line-height:           @line-height-tighter;
 @tooltip-letter-spacing:        @letter-spacing-loose;
 @tooltip-arrow-size:            6px;
 
