--- a/templates/_iconfont/icons.html
+++ b/templates/_iconfont/icons.html
@@ -1886,19 +1886,19 @@
                 <div class="well u-clearfix u-text-center example">
                     <div class="row">
                         <div class="col-md-3">
-                            <a class="tooltip tooltip--top tooltip--multiline" aria-label="This is a multiline tooltip that fits longer sentences." data-placement="top" class="tooltip"-multiline>&nbsp</a>
+                            <a class="tooltip tooltip--top tooltip--multiline" aria-label="This is a multiline tooltip that fits longer sentences.">&nbsp</a>
                             <div>Multiline top</div>
                         </div>
                         <div class="col-md-3">
-                            <a href="#" class="tooltip tooltip--right tooltip--multiline" aria-label="This is a multiline tooltip that fits longer sentences." data-placement="right" class="tooltip"-multiline>&nbsp</a>
+                            <a href="#" class="tooltip tooltip--right tooltip--multiline" aria-label="This is a multiline tooltip that fits longer sentences.">&nbsp</a>
                             <div>Multiline right</div>
                         </div>
                         <div class="col-md-3">
-                            <a href="#" class="tooltip tooltip--bottom tooltip--multiline" aria-label="This is a multiline tooltip that fits longer sentences." data-placement="bottom" class="tooltip"-multiline>&nbsp</a>
+                            <a href="#" class="tooltip tooltip--bottom tooltip--multiline" aria-label="This is a multiline tooltip that fits longer sentences.">&nbsp</a>
                             <div>Multiline bottom</div>
                         </div>
                         <div class="col-md-3">
-                            <a href="#" class="tooltip tooltip--left tooltip--multiline" aria-label="This is a multiline tooltip that fits longer sentences." data-placement="left" class="tooltip"-multiline>&nbsp</a>
+                            <a href="#" class="tooltip tooltip--left tooltip--multiline" aria-label="This is a multiline tooltip that fits longer sentences.">&nbsp</a>
                             <div>Multiline left</div>
                         </div>
 
