--- a/src/styles/objects/tooltips.less
+++ b/src/styles/objects/tooltips.less
@@ -51,7 +51,7 @@
             color: @tooltip-color;
             content: attr(aria-label);
             font-size: @tooltip-font-size;
-            line-height: @tooltip-font-size;
+            line-height: @tooltip-line-height !important;
             letter-spacing: @tooltip-letter-spacing;
             text-align: center;
             text-transform: none;
@@ -59,7 +59,6 @@
             font-weight: @tooltip-font-weight;
             word-wrap: break-word;
             white-space:pre;
-            -webkit-font-smoothing: subpixel-antialiased; // Make tooltips more readable
         }
 
         &:hover,
