--- a/src/styles/base/mixins.less
+++ b/src/styles/base/mixins.less
@@ -13,6 +13,7 @@
     @import 'mixins/media-queries';
     @import 'mixins/momentum-scrolling';
     @import 'mixins/placeholder';
+    @import 'mixins/rgba';
     @import 'mixins/text-overflow';
     @import 'mixins/vertically-centered';
-    @import 'mixins/webkit-scrollbars';
+    @import 'mixins/pretty-scrollbars';
