--- a/src/styles/objects/table-styles.less
+++ b/src/styles/objects/table-styles.less
@@ -96,7 +96,7 @@
     .table-responsive {
         margin-bottom: @spacing-base; // add vertical-rhytmn
         .momentum-scrolling();
-        .webkit-scrollbars();
+        .pretty-scrollbars();
 
         table {
             margin-bottom: 0; // remove vertical-rhytmn
