--- a/templates/_iconfont/icons.html
+++ b/templates/_iconfont/icons.html
@@ -1841,9 +1841,9 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td><code>.webkit-scrollbars();</code>
+                                <td><code>.pretty-scrollbars();</code>
                                 </td>
-                                <td>Add styled -webkit scrollbars to element if child elements are larger than parent.
+                                <td>Add styled -webkit scrollbars to element if child elements are larger than parent. Also autohide scrollbars in IE.
                                 </td>
                             </tr>
                         </tbody>
