--- a/src/styles/base/mixins/vertically-centered.less
+++ b/src/styles/base/mixins/vertically-centered.less
@@ -10,7 +10,7 @@
 // Add ´transform-style: preserve-3d;´ to parent-element
 
 .vertically-centered() {
-    position: absolute;
+    position: relative;
     top: 50%;
     transform: translateY(-50%);
 }
