reset rounded webkit search field

--- a/src/styles/base/resets.less
+++ b/src/styles/base/resets.less
@@ -34,7 +34,7 @@
             width: auto; // Firefox 36+
         }
         &[type="search"] {
-            -webkit-appearance: textfield; // Safari 8+
+            -webkit-appearance: none; // Safari 8+
             &::-webkit-search-cancel-button, &::-webkit-search-decoration {
                 -webkit-appearance: none; // Safari 8+
             }
