--- a/src/styles/base/mixins/grid.less
+++ b/src/styles/base/mixins/grid.less
@@ -30,6 +30,7 @@
 .make-column(@gutter: @grid-gutter-width) {
     float: left;
     position: relative;
+    min-height: 1px;
     & when (@gutter > 0) {
         padding-left:(@gutter / 2);
         padding-right: (@gutter / 2);
