variable for input radio size

--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -187,6 +187,7 @@
 @input-checkbox-checked-color:  currentColor;
 @input-checkbox-border-radius:  0;
 @input-radio-checked-color:     currentColor;
+@input-radio-checked-margin:    .2em;
 
 // Buttons
 @button-font-size:              14px;
