--- a/src/styles/base/resets.less
+++ b/src/styles/base/resets.less
@@ -25,17 +25,14 @@
         display: none; // Chrome 40+, iOS 8+, Safari 8+
     }
 
-    details {
-        display: block; // Firefox 36+, Internet Explorer 11+, Windows Phone 8.1+
-    }
-
     input {
         &[type="number"] {
             width: auto; // Firefox 36+
         }
         &[type="search"] {
             -webkit-appearance: none; // Safari 8+
-            &::-webkit-search-cancel-button, &::-webkit-search-decoration {
+            &::-webkit-search-cancel-button,
+            &::-webkit-search-decoration {
                 -webkit-appearance: none; // Safari 8+
             }
         }
@@ -92,7 +89,6 @@
     }
 
     // Universal inheritance
-
     *,
     ::before,
     ::after {
@@ -115,8 +111,6 @@
         text-decoration: inherit;
         vertical-align: inherit;
     }
-
-    // Opinionated defaults
 
     // Specify the text decoration of anchors and improve readability of focused elements when they are also in an active/hover state.
     a {
@@ -199,6 +193,7 @@
         text-shadow: none;
     }
 
+    // Hide content from screens but not screenreaders
     @media screen {
         [hidden~="screen"] {
             display: inherit;
