new spacing variables and form-item label margin

--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -57,8 +57,11 @@
 
 // Spacing
 @spacing-base:                  @base-line-height;
-@spacing-third:                 round(@base-line-height / 3);
 @spacing-half:                  round(@base-line-height / 2);
+@spacing-third:                 round(@base-line-height / 3);
+@spacing-fourth:                round(@base-line-height / 4);
+@spacing-fifth:                 round(@base-line-height / 5);
+@spacing-sixth:                 round(@base-line-height / 6);
 @spacing-double:                round(@base-line-height * 2);
 
 // Modular Scale
@@ -163,6 +166,7 @@
 @fieldset-border-color:         @grey-100;
 
 // Label & legend
+@label-margin:                  @spacing-sixth;
 @label-font-size:               inherit;
 @label-color:                   @base-color;
 @legend-font-weight:            700;
