--- a/src/styles/base/mixins/pretty-scrollbars.less
+++ b/src/styles/base/mixins/pretty-scrollbars.less
@@ -5,16 +5,26 @@
 .pretty-scrollbars() {
     ms-overflow-style: -ms-autohiding-scrollbar;
 
+    // Style Scrollbars in Webkit only
+
     &::-webkit-scrollbar {
+        -webkit-appearance: none;
         height: 4px;
         width: 4px;
     }
 
-    &::-webkit-scrollbar-track {
+    &::-webkit-scrollbar-thumb {
+        border-radius: @border-radius-default;
+        border: 4px solid rgba(255, 255, 255, 0);
+        background-clip: content-box;
+        background-color: rgba(0, 0, 0, 0.2);
     }
 
-    &::-webkit-scrollbar-thumb {
-        background-color: rgba(0, 0, 0, 0.2);
-        border-radius: @border-radius-default;
+    &::-webkit-scrollbar-thumb:hover {
+        background-color: rgba(0, 0, 0, 0.4);
+    }
+
+    &::-webkit-scrollbar-corner {
+        background-color: transparent;
     }
 }
