better mixin for modular-scale

--- a/src/styles/base/mixins.less
+++ b/src/styles/base/mixins.less
@@ -11,6 +11,7 @@
     @import 'mixins/grid';
     @import 'mixins/hide-text';
     @import 'mixins/media-queries';
+    @import 'mixins/modular-scale';
     @import 'mixins/momentum-scrolling';
     @import 'mixins/placeholder';
     @import 'mixins/rgba';
