--- a/src/styles/base/typography.less
+++ b/src/styles/base/typography.less
@@ -40,60 +40,60 @@
 
     h1,
     .h1 {
-        .font-size(3,true);
+        .modular-scale(3);
     }
 
     h2,
     .h2 {
-        .font-size(2,true);
+        .modular-scale(2);
     }
 
     h3,
     .h3 {
-        .font-size(1,true);
+        .modular-scale(1);
     }
 
     h4,
     .h4,
     h5,
     .h5 {
-        .font-size(0,true);
+        .modular-scale(0);
     }
 
     h6,
     .h6 {
-        .font-size(-1,true);
+        .modular-scale(-1);
     }
 
     @media @medium-up {
         h1,
         .h1 {
-            .font-size(4,true);
+            .modular-scale(4);
         }
 
         h2,
         .h2 {
-            .font-size(3,true);
+            .modular-scale(3);
         }
 
         h3,
         .h3 {
-            .font-size(2,true);
+            .modular-scale(2);
         }
 
         h4,
         .h4 {
-            .font-size(1,true);
+            .modular-scale(1);
         }
 
         h5,
         .h5 {
-            .font-size(0,true);
+            .modular-scale(0);
         }
 
         h6,
         .h6 {
-            .font-size(-1,true);
+            .modular-scale(-1);
         }
     }
 
@@ -111,7 +111,7 @@
         cite {
             font-family: @base-font-family;
             color: lighten(@base-color, 20%);
-            .font-size(-1,true);
+            .modular-scale(-1);
             font-style: normal;
             // ´–´ line before cite
             &:before {
