--- a/src/styles/base/mixins/font-size.less
+++ b/src/styles/base/mixins/font-size.less
@@ -1,27 +1,18 @@
 //
-// Font-size & Modular Scale (REM)
+// Font-size (REM)
 // -------------------------------------------------------
 
-// Convert unitless pixel values to rem.
+// Convert pixel values to rem.
 
 // Usage
 // .selector {
 //    .font-size(24);
 // }
 
-.font-size(@font-size-value, @use-modular-scale:false) when (@use-modular-scale = false){
-    @rem-value: (@font-size-value / @base-font-size * 1rem);
+.font-size(@font-size-value) {
+
+    // Calculate rem-size
+    @rem-value: (unit(@font-size-value) / @base-font-size * 1rem);
+
     font-size: ~'@{rem-value}';
-}
-
-// Convert unitless modular-scale values to rem.
-// Set @modular-scale-factor in variables.
-
-// Usage
-// .selector {
-//    .font-size(2,true);
-// }
-
-.font-size(@font-size-value, @use-modular-scale:false)  when (@use-modular-scale = true) {
-    font-size: round((pow(@modular-scale-factor, @font-size-value) * 1rem), 3);
 }
