simpler hide by media query

--- a/src/styles/base/lists.less
+++ b/src/styles/base/lists.less
@@ -6,7 +6,7 @@
     ul, ol {
         margin-left: @spacing-base;
         & & {
-            margin-bottom: auto;
+            margin-bottom: 0;
         }
         nav & {
             margin: 0;
