--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -3,7 +3,7 @@
 // Enabling current media query, displays currently used
 // media query.
 // DO NOT USE THESE IN PRODUCTION!
-@use-current-media-query:       false;
+@use-current-media-query:       true;
 @use-debug:                     false;
 
 
