--- a/src/styles/base/main.less
+++ b/src/styles/base/main.less
@@ -4,16 +4,16 @@
 .main(@boolean) when (@boolean = true) {
 
     :root {
-        background-color: @base-background;
-        color: @base-color;
-        font-family: @base-font-family;
-        font-size: (unit(@base-font-size / 16) * 100%);
+        font-size: (unit(@base-font-size / 16) * 100%); // might as well be in px size in order to rem work...
         height: 100%; // Ensure the <html> element's `height` is at least the viewport height.
-        line-height: @line-height-ratio;
     }
 
     body {
+        background-color: @base-background;
+        color: @base-color;
+        font-family: @base-font-family;
         font-size: 1rem;
+        line-height: @line-height-ratio;
         min-height: 100%; // Ensure the <body> element's `min-height` is at least the viewport height.
     }
 
